# internal/docs/swagger.json
@@ -1037,7 +1037,7 @@
                 "summary": "Create monitor",
                 "parameters": [
                     {
-                        "description": "Monitor payload. type is one of http, tcp, ping, dns (default http)",
+                        "description": "Monitor payload. type is one of http, tcp, ping, dns, docker (default http)",
                         "name": "body",
                         "in": "body",
                         "required": true,
@@ -2345,6 +2345,10 @@
                 },
                 "dnsResolver": {
                     "description": "resolver to query, host or host:port (default system)",
+                    "type": "string"
+                },
+                "dockerHostId": {
+                    "description": "Docker host used to inspect the container",
                     "type": "string"
                 },
                 "followRedirects": {
